Connection interface extedded by method for getting connection channel. Bugs idetified by FindBug analyzer fixed in library source code, Just two place where deatch storage is allocated in switch command and missing Java doc is now in ource code. Unit test producing more than these types of potentional bugs, but almos all are valid. Rest of these bug needs to be refactored after work on connections will be done.